editing spacing issue

--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -1,7 +1,6 @@
 #portfolio {
     /* margin: 20px 100px 50px 100px; */
     margin: 20px 5vw 50px 5vw;
-
     background-color: transparent;
 }
 
@@ -17,7 +16,9 @@
     padding: 20px;
     background-color: transparent;
     margin-bottom: 30px;
-}.menu-bar:hover {
+}
+
+.menu-bar:hover {
     cursor: pointer;
     text-shadow: 1px 1px 10px rgba(219, 219, 219, 0.671);
 }
@@ -60,11 +61,12 @@
     min-height: 400px;
     /* height: fit-content; */
     /* width: fit-content; */
-    margin: auto;
+    margin: 20px auto 50px auto;
+    /* margin: auto; */
     /* box-shadow: 0px 0px 100px 70px rgb(94, 94, 94); */
     background: transparent;
     flex-wrap: wrap;
-    /* justify-content: space-around; */
+    justify-content: space-between;
 }
 
 /*--------Project Card---------------------------------------------------------------------------------*/
@@ -207,7 +209,6 @@
     display: flex;
     align-items: center;
     background-color: transparent;
-
 }
 
 .project-favicon {
@@ -222,7 +223,6 @@
     font-size: 40px;
     margin-left: 30px;
     text-shadow: .3px .3px #e782ebbe, -.3px -.3px #eeec7ec2, .5px .5px 1px #ffffffbe;
-
 }
 
 .project-header {
@@ -239,15 +239,19 @@
     border-radius: 5px;
     background-color: transparent;
     color: #B0B3B8;
-}.modal-header-btn:hover {
+}
+
+.modal-header-btn:hover {
     border: 1px solid white;
     color: white;
 }
 
-.modal-header-btn > a{
+.modal-header-btn>a {
     text-decoration: none;
     color: #B0B3B8;
-}.modal-header-btn:hover > a {
+}
+
+.modal-header-btn:hover>a {
     color: white;
 }
 
@@ -264,7 +268,6 @@
     color: #B0B3B8;
     font-size: 16px;
     line-height: 22px;
-
     height: 60px;
     background-color: transparent;
     margin-top: 5px;
@@ -300,8 +303,7 @@
     margin: 20px;
     margin-top: 30px;
     /* padding: 10px; */
-
-} 
+}
 
 .project-image {
     /* height: 425px; */
@@ -319,8 +321,8 @@
 
 /* ---------- Media Screens ----------- */
 
-/* @media only screen and (min-width: 1025px) {
-    .portfolio {
-        margin: 20px 5vw 50px 5vw;
+@media only screen and (min-width: 1625px) {
+    .projects-container {
+        margin: 20px 10vw 50px 10vw;
     }
-} */
+}
